feat: added posts, added menu, added create post

--- a/style/login.css
+++ b/style/login.css
@@ -15,12 +15,18 @@ body {
 }
 
 .form-login {
+    -ms-flex-align: center;
+    align-items: center;
     width: 100%;
     max-width: 400px;
     padding: 15px;
     margin: auto;
     background-color: #f5f5f5;
     border-radius: 15px;
+    position: fixed; top: 50%; left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 .form-login .form-control {
