--- a/style/main.css
+++ b/style/main.css
@@ -1,11 +1,52 @@
 .bg-custom-2{
     background-image: linear-gradient(5deg, #13547a 50%, #80d0c7 150%);
 }
+html,
+body {
+    background-color: #f5f5f5;
+    height: 100%;
+}
 
-.form-login{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    background-image: linear-gradient(5deg, #1778b3 0%, #aef1e9 150%);
+.sidebarMenu {
+    height: 100%;
+
+}
+
+.sidebarMenu .row {
+    height: 100%;
+    margin-top: 55px;
+    margin-left: 70px;
+}
+
+.avatar {
+    border-radius: 100px; /* Радиус скругления */
+    height: 25px;
+}
+.newsPost{
+    background-color: white;
+    border-radius: 4px;
+    padding: 15px;
+    margin: 10px;
+    min-width: 600px;
+    max-width: 600px;
+    border-color: #8f8f8f;
+}
+.card-title .card-body{
+    text-align: left;
+}
+.posts_users{
+    margin: 10px;
+    width: 600px;
+}
+.social{
+    margin: 10px;
+}
+
+.like{
+    margin-right: 200px;
+}
+
+.comment{
+    margin-right: 200px;
+
 }
