--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,7 @@
-.bg-custom-2{
+.bg-custom-2 {
     background-image: linear-gradient(5deg, #13547a 50%, #80d0c7 150%);
 }
+
 html,
 body {
     background-color: #f5f5f5;
@@ -14,7 +15,7 @@ body {
 
 .sidebarMenu .row {
     height: 100%;
-    margin-top: 55px;
+    margin-top: 50px;
     margin-left: 70px;
 }
 
@@ -22,7 +23,8 @@ body {
     border-radius: 100px; /* Радиус скругления */
     height: 25px;
 }
-.newsPost{
+
+.newsPost {
     background-color: white;
     border-radius: 4px;
     padding: 15px;
@@ -31,22 +33,27 @@ body {
     max-width: 600px;
     border-color: #8f8f8f;
 }
-.card-title .card-body{
+
+.card-title .card-body {
     text-align: left;
 }
-.posts_users{
+
+.posts_users {
     margin: 10px;
     width: 600px;
 }
-.social{
-    margin: 10px;
+
+.social {
+    margin: 4px;
 }
 
+/*
 .like{
-    margin-right: 200px;
+    float:left;
+    margin-right:5px;
 }
 
 .comment{
-    margin-right: 200px;
-
-}
+    float:left;
+    margin-right:5px;
+}*/
